--- a/style.css
+++ b/style.css
@@ -3,8 +3,9 @@ body{
 }
 
 input:focus{
-    border:orange;
+    border:2px solid black;
     background-color: orange;
+
 }
 
 .first-container{
@@ -34,7 +35,7 @@ input:focus{
 
 #input-value{
     padding: 100px;
-    width: 700px;
+    width: 300px;
 }
 
 .the-button{
@@ -46,4 +47,13 @@ input:focus{
     height: 50px;
     color:orange;
     box-shadow: 10px 5px 5px burlywood;
+}
+ 
+
+li{
+    width: 320px;
+    height:80px;
+    border: 3px solid black;
+    margin-bottom: 10px;
+    margin-top: 10px;
 }
