--- a/style.css
+++ b/style.css
@@ -26,6 +26,7 @@ input:focus{
     background-color:white;
     margin-left:45px;
     margin-right: 40px;
+    overflow: auto;
     
 }
 
@@ -56,4 +57,10 @@ li{
     border: 3px solid black;
     margin-bottom: 10px;
     margin-top: 10px;
+    overflow: scroll;
 }
+
+ul{
+    list-style-type: none;
+}
+
